# ChangeLog for eclass directory
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/eclass/cvs-repo/gentoo-x86/eclass/ChangeLog,v 1.425 2012/10/02 10:46:02 scarabeus Exp $

  02 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> obs-download.eclass:
  Change the documentation a bit and take OBS_PACKAGE from PN if not set.

  02 Oct 2012; Michael Palimaka <kensington@gentoo.org> cmake-utils.eclass,
  virtualx.eclass:
  Make VIRTUALX_COMMAND nonfatal so that Xvfb is always killed. Return status
  at the end of CMake test phase. This fixes bug #406353.

  02 Oct 2012; Mike Gilbert <floppym@gentoo.org> python.eclass:
  Add 3.3 as a supported python abi for testing.

  29 Sep 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  virtualx.eclass:
  Increase Xfvb resolution to address gimp test failure, bug #414853.

  29 Sep 2012; Joerg Bornkessel <hd_brummy@gentoo.org> vdr-plugin-2.eclass:
  added helper function to remove i18n.h includes, if media-plugins/vdr-* are
  still use the obsoleted i18n handling and unsupported to gettext handling

  28 Sep 2012; Ulrich Müller <ulm@gentoo.org> eutils.eclass:
  Test for the EAPI explicitly, because it isn't guaranteed that package
  managers implement usex as a shell function.

  28 Sep 2012; Ian Stakenvicius <axs@gentoo.org> toolchain-funcs.eclass:
  reverted fatal error from unset KV and made it a warning only shown when
  checking for 'kern' arch, so that the portage environment call of tc-arch
  will not fail anymore, bug 436450

  27 Sep 2012; Mike Gilbert <floppym@gentoo.org> python.eclass:
  Remove a silly EAPI conditional.

  27 Sep 2012; Ian Stakenvicius <axs@gentoo.org> toolchain-funcs.eclass:
  Fixed tc-ninja_magic_to_arch() to also use KV_FULL and fail if no kernel
  version specified, bug 432390

  27 Sep 2012; Ian Stakenvicius <axs@gentoo.org> eutils.eclass:
  Made 'usex' declaration conditional on lack of PM or EAPI5+ support
